--- a/SkyTelSPA/src/app/register/register.component.html
+++ b/SkyTelSPA/src/app/register/register.component.html
@@ -1,1 +1,56 @@
-<h1>media</h1>>
+<!doctype html>
+<html>
+<head>
+    <title>Log In</title>
+    
+</head>
+<body>
+        <div id="container">
+                <header id="header">
+                <nav id="user-options">
+                    <ul id="navigation">
+                        <li><img src="../img/skytel-logo.jpg" alt="SkyTelLogo" height="42" width="42"/></li>
+                        <li style="float: right"><a href="index.html">Personal</a></li>
+                        <li style="float: right"><a href="bussiness.html">Bussiness</a></li>
+                    </ul>
+                </nav>
+                <hr>
+                <br>
+                <nav id="nav-bar">
+                    <ul id="navigation">
+                        <li><a href="index.html">HOME</a></li>
+                        <li><a href="login.html"?>LOGIN</a></li>
+                        <li><a href="register.html">REGISTER</a></li>
+                        <li style="float: right"><a href="about-us.html">ABOUT US</a></li>
+                        <li style="float: right"><a href="contact-us.html">CONTACT US</a></li>
+                    </ul>    
+                </nav>
+                </header>
+            </div>
+            <hr>
+    <form>
+        <fieldset>
+            <legend>Signup</legend>
+            <label>Full Name</label><input type="text" id="fn"/><br/>
+            <label>Email</label><input type="text" id="email"/><br/>
+            <label>Phone</label><input type="text" id="phone"/><br/>
+            <label>Username</label><input type="text" id="usr"/><br/>
+            <label>Password</label><input type="text" id="pwd"/><br/>
+            <input type="button" value="Signup" id="reg"/>
+            <input type="button" value="Reset" id="reset"/><br/>
+            <a href="login.html">Existing User? Log In</a>
+        </fieldset>
+    </form>
+    <div id="container">
+            <footer id="footer">
+                <ul id="navigation">
+                    <li><a href="media.html">MEDIA</a></li>
+                    <li><a href="careers.html">CAREERS</a></li>
+                    <li style="float: right"><a href="about-us.html">ABOUT SkyTel</a></li>
+                </ul>
+                <hr>
+                <div id="trailer"><h4>&copy SkyTel<sup>&reg;</sup> 2018</h4></div>
+            </footer>
+        </div>
+</body>
+</html>
