--- a/SkyTelSPA/src/styles.css
+++ b/SkyTelSPA/src/styles.css
@@ -1,1 +1,95 @@
-/* You can add global styles to this file, and also import other style files */
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: white;
+}
+
+li {
+    float: left;
+    border-right: 1px solid white;
+}
+
+li a {
+    display: block;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    color: #666;
+
+}
+
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+    background-color:beige;
+}
+li:last-child {
+    border-right: none;
+}
+            table.center {
+            margin-left:auto; 
+            margin-right:auto;
+            }
+            body{
+                background-color:bisque;
+                font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+                font-size: 20px;
+
+            }
+            label{
+                float: left;
+                width: 100px;
+                height:40px;
+            }
+            input[type=text] {
+                background-color:whitesmoke ;
+                color: black;
+                border: 3px solid #555;
+                width:500px;
+                height:40px;
+                padding: 2px;
+            }
+            input[type=button], input[type=submit], input[type=reset],button {
+                background-color: #4CAF50;
+                border: none;
+                color: black;
+                padding: 16px 32px;
+                text-decoration: none;
+                margin: 4px 2px;
+                cursor: pointer;
+               
+               
+                border-radius: 30px;
+            }
+            #myTable {
+                font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+                border-collapse: collapse;
+                width: 100%;
+            }
+
+            #myTable td, #myTable th {
+                border: 1px solid #ddd;
+                padding: 8px;
+            }
+
+            #myTable tr:nth-child(even){background-color: #f2f2f2;}
+
+            #myTable tr:hover {background-color: #ddd;}
+
+            #myTable th {
+                padding-top: 12px;
+                padding-bottom: 12px;
+                text-align: left;
+                background-color: #4CAF50;
+                color: white;
+            }
+            #trailer{
+                margin: auto;
+                width: 500px;
+                text-align: center;
+               
+            }
+            
+    
